config/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: k8s-microproject-deployment
  namespace: virtu
spec:
  selector:
    matchLabels:
      app: microproject
  template:
    metadata:
      labels:
        app: microproject
    spec:
      containers:
        - name: microprojectcontainer
          image: tang0ch4rlie/k8s-microproject
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: microproject-storage
              mountPath: /app/data
      volumes:
        - name: microproject-storage
          persistentVolumeClaim:
            claimName: microproject-pvc
