config/ingress.yaml
# kubectl create deployment nginx-demo --image=nginxdemos/hello --namespace=virtu
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-microproject-ingress
  namespace: virtu
spec:
  tls:
    - secretName: tls-secret
      hosts:
        - 'microproject.com'
  rules:
    - host: microproject.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-microproject-service
                port:
                  number: 3000
